fix: Configure production URLs for Vercel deployment - Added VITE_API_URL environment variable in vercel.json pointing to Render backend - Updated CORS configuration to allow https://memory-os.vercel.app - Improved error messages to be more user-friendly - Fixed frontend-backend connection for production deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm install",
+  "env": {
+    "VITE_API_URL": "https://memoryos-backend.onrender.com"
+  },
   "rewrites": [
     {
       "source": "/(.*)",
